@@ -1,3 +1,5 @@
+1668.	[bug]		DIG_SIGCHASE was making bin/dig/host dump core.
+
 1667.	[port]		linux: not all versions have IF_NAMESIZE.
 
 1666.	[bug]		The optional port on hostnames in dual-stack-servers
